[package]
name = "est-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
as-any = "0.3.2"
atomic_enum = "0.3.0"
lewton = "0.10.2"
miniaudio-sys = { package = "est-audio-fork-ep-miniaudio-sys", git = "https://github.com/Estrol/miniaudio-rs" }
ogg = "0.9.2"
ogg-opus = "0.1.2"
once_cell = "1.21.3"
sha2 = "0.10.9"
wide = "1.1.1"
astretch = { git = "https://github.com/Estrol/astretch"}
thiserror = "2.0.18"
bytemuck = "1.25.0"

[dev-dependencies]
ringbuf = "0.4.8"

[package.metadata.capi]
min_version = "0.6.10"

[features]
capi = []
fx = []

[profile.release]
opt-level = "z"
debug = true